// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`From Email Typeahead Wrapper should render 1`] = `
<FromEmail
  label="label"
  onChange={[Function]}
/>
`;

exports[`From Email Typeahead Wrapper should render error 1`] = `
<FromEmail
  error="error message"
  label="label"
  onChange={[Function]}
/>
`;

exports[`From Email Typeahead should render list 1`] = `
<div
  className={undefined}
  onFocus={undefined}
>
  <TextField
    required={false}
    type="text"
  />
  <ActionList
    actions={
      Array [
        Object {
          "content": "test@test.com",
          "highlighted": true,
          "index": 0,
          "item": "test@test.com",
        },
      ]
    }
    className=""
  />
</div>
`;
